--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <main class="warp-club">
       <section class="column1">
-        <div>warp club</div>
+        <div>night club</div>
       </section>
       <section class="column2"></section>
     </main>
